--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="arrow"></div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
-  <script src="script.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
+  <script defer src="script.js"></script>
 
 </body>
 </html>
